[package]
name = "ddbug"
version = "0.2.0"
authors = ["Philip Craig <philipjcraig@gmail.com>"]
description = "Display debugging information"
repository = "https://github.com/philipc/ddbug"
readme = "README.md"
keywords = ["debug", "DWARF", "PDB"]
categories = ["development-tools::debugging"]
license = "Apache-2.0/MIT"

[dependencies]
clap = "2.26"
env_logger = "0.3"
gimli = "0.14"
log = "0.3"
memmap = "0.6"
object = "0.6"
pdb = "0.2"
