[package]
name = "ddbug"
version = "0.3.0"
description = "Display debugging information"
repository = "https://github.com/gimli-rs/ddbug"
readme = "../README.md"
keywords = ["debug", "DWARF"]
categories = ["development-tools::debugging"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
capstone = "0.11.0"
capstone-sys = "0.15.0"
clap = { version = "4.0.28", features = ["cargo", "wrap_help"] }
env_logger = "0.10.0"
fnv = "1.0"
log = "0.4"
marksman_escape = "0.1"
memmap = "0.7"
parser = { package = "ddbug_parser", version = "0.3.0", path = "../parser" }
hyper = { version = "0.14", features = ["server", "tcp", "http1", "http2"] }
tokio = "1.0"

[features]
system_alloc = []
default = []
