[package]
name = "ddbug"
version = "0.3.0"
description = "Display debugging information"
repository = "https://github.com/gimli-rs/ddbug"
readme = "../README.md"
keywords = ["debug", "DWARF"]
categories = ["development-tools::debugging"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
capstone = "0.12.0"
capstone-sys = "0.16.0"
clap = { version = "4.5.4", features = ["cargo", "wrap_help"] }
env_logger = "0.11.3"
log = "0.4"
marksman_escape = "0.1"
parser = { package = "ddbug_parser", version = "0.3.0", path = "../parser" }
hyper = { version = "1.2.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
http-body-util = "0.1.0"
tokio = { version = "1.37.0", features = ["net", "rt"] }

[features]
system_alloc = []
default = []
