[package]
name = "ddbug_parser"
version = "0.3.0"
description = "Unified debug information parser"
repository = "https://github.com/gimli-rs/ddbug"
keywords = ["debug", "DWARF"]
categories = ["development-tools::debugging"]
license = "Apache-2.0/MIT"
edition = "2018"

[dependencies]
fnv = "1.0"
gimli = "0.26"
log = "0.4"
memmap = "0.7"
object = "0.28"

[features]
default = []
