[package]
name = "ddbug_parser"
version = "0.4.0"
description = "Unified debug information parser"
repository = "https://github.com/gimli-rs/ddbug"
keywords = ["debug", "DWARF"]
categories = ["development-tools::debugging"]
license = "Apache-2.0 OR MIT"
edition = "2024"
rust-version = "1.85"

[dependencies]
fnv = "1.0"
gimli = "0.32.0"
log = "0.4"
memmap2 = "0.9.4"
object = { version = "0.37.1", features = ["wasm"] }

[features]
default = []
